fix friend button alignment

--- a/app/assets/stylesheets/profiles.scss
+++ b/app/assets/stylesheets/profiles.scss
@@ -1,7 +1,10 @@
 .user-basic-info,
-.friend-requests,
-.friend-button {
+.friend-requests {
   margin-left: 50px;
+}
+
+.friend-button {
+  margin-left: 60px;
 }
 
 .user-fullname,
